--- a/styles/sass/_contact-page.scss
+++ b/styles/sass/_contact-page.scss
@@ -118,9 +118,7 @@ input::placeholder, textarea::placeholder {
 
 }
 
-input[type="email"] {
-  margin-left: 30px;
-}
+
 
 .contact-page-message textarea {
   box-sizing: border-box;
