--- a/styles/sass/_home-page.scss
+++ b/styles/sass/_home-page.scss
@@ -106,10 +106,6 @@ header h2 {
   text-align: center;
   line-height: 50px;
   padding: 10px;
-  // margin-right: 15px;
-  position: relative;
-  top: 50px;
-  right: 80px;
 }
 
 .icon-heading {
@@ -281,4 +277,42 @@ footer {
     justify-content: space-around;
     flex-flow: column wrap;
   }
+}
+
+
+
+
+
+/* styles.css | file:///Users/karmen/juno/projects/bar-one-psd-conversion/styles/styles.css */
+
+h3 {
+  display: inline;
+  margin-left: 0px;
+}
+
+.more-info p {
+  /* max-width: 600px; */
+  max-width: 570px;
+  margin-left: 70px;
+}
+
+.fas.round-icon {
+  /* width: 50px; */
+  /* height: 50px; */
+  /* line-height: 50px; */
+  /* top: 50px; */
+  /* right: 80px; */
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 80%;
+}
+
+.wrap {
+  position: relative;
+  left: 100px;
+}
+.locations-row-1-img img {
+  position: relative;
+  left: -100px;
 }
